Change config and add wait script
Changed config to use elasticsearch version 5 and
disabled the load of kitchensink workflows.

Added wait for script to use in docker setup.

Signed-off-by: Jozef Rozsa <jrozsa@frinx.io>

--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -46,6 +46,9 @@ workflow.elasticsearch.url=es:9300
 # Name of the elasticsearch cluster
 workflow.elasticsearch.index.name=conductor
 
+# Set elasticsearch version
+workflow.elasticsearch.version=5
+
 # Additional modules (optional)
 # conductor.additional.modules=class_extending_com.google.inject.AbstractModule
 
@@ -54,4 +57,4 @@ workflow.elasticsearch.index.name=conductor
 # com.netflix.conductor.contribs.metrics.LoggingMetricsModule.reportPeriodSeconds=15
 
 # Load sample kitchen sink workflow
-loadSample=true
+loadSample=false
