Increase dynomite conn pool size and timeouts
Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -17,6 +17,7 @@ workflow.dynomite.cluster.hosts=dyno1:8102:us-east-1c
 
 # Dynomite cluster name
 workflow.dynomite.cluster.name=dyno1
+workflow.dynomite.connection.maxConnsPerHost=30
 
 # Namespace for the keys stored in Dynomite/Redis
 workflow.namespace.prefix=conductor
