--- a/docker/server/config/config-local.properties
+++ b/docker/server/config/config-local.properties
@@ -24,6 +24,8 @@ workflow.namespace.queue.prefix=conductor_queues
 # No. of threads allocated to dyno-queues (optional)
 queues.dynomite.threads=10
 
+workflow.dynomite.connection.maxConnsPerHost=30
+
 # Non-quorum port used to connect to local redis.  Used by dyno-queues.
 # When using redis directly, set this to the same port as redis server
 # For Dynomite, this is 22122 by default or the local redis-server port used by Dynomite.
