--- a/kafka-persistence/build.gradle
+++ b/kafka-persistence/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     compile project(':conductor-core')
+    compile project(':conductor-es5-persistence')
 
     compile "commons-io:commons-io:${revCommonsIo}"
 
