--- a/charts/preview/values.yaml
+++ b/charts/preview/values.yaml
@@ -94,48 +94,48 @@ netflix-conductor:
 # Add the following and change enabled to true if external es required
 elasticsearch:
   enabled: true
-   appVersion: "5.6"
-   image:
-     repository: elasticsearch
-     tag: "5.6"
-  # cluster:
-  #   name: foxsports_conductor_elasticsearch_cluster
-  #   additionalJavaOpts: -XX:MaxMetaspaceSize=256m
-  #   plugins:
-  #   - x-pack # Needs to be installed for x-pack options to work even though they are all false by default...
-  #   config:
-  #     thread_pool.search.queue_size: 2000
-  # master:
-  #   replicas: 2
-  #   persistence:
-  #     enabled: false
-  #   resources:
-  #     limits:
-  #       memory: "1Gi"
-  #     requests:
-  #       cpu: "200m"
-  #       memory: "1Gi"       
-  # data: 
-  #   persistence: 
-  #     enabled: false      
-  # client:
-  #   exposeTransportPort: true
-  #   resources:
-  #     limits:
-  #       memory: "1Gi"
-  #     requests:
-  #       cpu: "100m"
-  #       memory: "1Gi"
-  #   ingress:
-  #     enabled: false
-  # ing_service: #responsible to expose the ing
-  #   name: es-ing-service
-  #   type: ClusterIP
-  #   externalPort: 80
-  #   internalPort: 9200
-  #   annotations:
-  #     fabric8.io/expose: "true"
-  #     fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
+  appVersion: "5.6"
+  image:
+    repository: elasticsearch
+    tag: "5.6"
+  cluster:
+    name: foxsports_conductor_elasticsearch_cluster
+    additionalJavaOpts: -XX:MaxMetaspaceSize=256m
+    plugins:
+      - x-pack # Needs to be installed for x-pack options to work even though they are all false by default...
+    config:
+      thread_pool.search.queue_size: 2000
+    master:
+      replicas: 2
+      persistence:
+        enabled: false
+      resources:
+        limits:
+          memory: "4Gi"
+        requests:
+          cpu: "1"
+          memory: "4Gi"
+    data:
+      persistence:
+        enabled: false
+    client:
+      exposeTransportPort: true
+      resources:
+        limits:
+          memory: "1Gi"
+        requests:
+          cpu: "500m"
+          memory: "1Gi"
+      ingress:
+        enabled: false
+    ing_service: #responsible to expose the ing
+      name: es-ing-service
+      type: ClusterIP
+      externalPort: 80
+      internalPort: 9200
+      annotations:
+        fabric8.io/expose: "true"
+        fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
 
 # Add the following and change enabled to true if external redis required
 redis:
