--- a/charts/netflixconductor/Chart.yaml
+++ b/charts/netflixconductor/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 description: Helm chart to deploy netflix conductor
-name: netflix-conductor
+name: netflixconductor
 appVersion: 2019.0.3
 version: 0.4.12
