--- a/charts/netflix-conductor/Chart.yaml
+++ b/charts/netflix-conductor/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 description: Helm chart to deploy netflix conductor
-name: netflixconductor
+name: netflix-conductor
 appVersion: 2019.0.3
 version: 0.4.12
