--- a/charts/netflix-conductor/makefile
+++ b/charts/netflix-conductor/makefile
@@ -7,7 +7,7 @@ NC     := \033[0m # No Color
 CHART_REPO := https://artifactory.cluster.foxsports-gitops-prod.com.au/artifactory/helm/
 CHART_REPO_KEY := helm-virtual
 CURRENT=$(pwd)
-NAME := netflix-conductor
+NAME := netflixconductor
 NAMESPACE := ${NAME}-test
 OS := $(shell uname)
 RELEASE_FILENAME := $(NAME)-$(shell sed -n 's/^version: //p' Chart.yaml).tgz
