--- a/charts/netflix-conductor/values.yaml
+++ b/charts/netflix-conductor/values.yaml
@@ -17,20 +17,17 @@ server:
     pullSecret:
   # extraVolumeMounts: []
   # extraVolumes: []
-  resources: {}
-    # limits:
-    # cpu: 100m
-    # memory: 128Mi
-    # requests:
-    # cpu: 100m
-    # memory: 128Mi
+  resources:
+    requests:
+      memory: "4500Mi"
+      cpu: "250m"
   service:
     type: ClusterIP
   ingress:
     annotations:
       fabric8.io/expose: "true"
       fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
-  jvmStartupOpts: "  -Xms1g -Xmx1g  -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
+  jvmStartupOpts: "  -Xms4g -Xmx4g  -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
   appStartupOpts: ""
   loadSamples: false
   newrelic:
