[OSS Submission] Conductor performs HTTP request signing in requests in ES6 module

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ allprojects {
         maven {
             url "https://dl.bintray.com/netflixoss/oss-candidate"
         }
+        maven {
+            url "https://repository.mulesoft.org/nexus/content/repositories/public/"
+        }
     }
 }
 
