--- a/es6-persistence/build.gradle
+++ b/es6-persistence/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     //ES6 Dependency
     compile "org.apache.logging.log4j:log4j-api:${revLog4jApi}"
     compile "org.apache.logging.log4j:log4j-core:${revLog4jCore}"
+    compile group: 'com.github.awslabs', name: 'aws-request-signing-apache-interceptor', version: 'b3772780da'
 
     testCompile "org.slf4j:slf4j-log4j12:${revSlf4jlog4j}"
     testCompile "org.awaitility:awaitility:${revAwaitility}"
