Database persistence: connection to a redis host with SSL/TLS encryption can be opted-in.

--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -18,6 +18,9 @@
 #format is host:port:rack separated by semicolon
 workflow.dynomite.cluster.hosts=host1:port:rack;host2:port:rack:host3:port:rack
 
+# Connect to host with SSL/TLS encryption? (redis only)
+workflow.dynomite.cluster.hosts.useSSL=false
+
 #namespace for the keys stored in Dynomite/Redis
 workflow.namespace.prefix=
 
