--- a/charts/netflix-conductor/files/conductor-config.properties
+++ b/charts/netflix-conductor/files/conductor-config.properties
@@ -13,7 +13,7 @@ conductor.grpc.server.enabled=false
 db=redis
 {{- else if .Values.mysql.enabled -}}
 db=mysql
-jdbc.url=jdbc:mysql://{{ .Values.mysql.host }}:{{ .Values.mysql.port }}/{{ .Values.mysql.dbName }}?useSSL=false
+jdbc.url=jdbc:mysql://{{ .Values.mysql.host }}:{{ .Values.mysql.port }}/{{ .Values.mysql.dbName }}?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Australia/Sydney
 jdbc.username={{ .Values.mysql.username }}
 jdbc.password={{ .Values.mysql.password }}
 
