at least 2 replica for server

--- a/charts/preview/values.yaml
+++ b/charts/preview/values.yaml
@@ -26,6 +26,7 @@ netflix-conductor:
   fullnameOverride: "netflix-conductor"
 
   server:
+    replicaCount: 2
     ingress:
       annotations:
         fabric8.io/expose: "true"
