gimme back my es
save

fix fix fix

sad

man

--- a/charts/preview/values.yaml
+++ b/charts/preview/values.yaml
@@ -40,13 +40,13 @@ netflix-conductor:
       enabled: true
       tracing:
         enabled: false
-      licenseKey: "c3a6b94918f96d44af11c628b52630d59f5ad20c"
+      licenseKey: "70e37aaa633e349320a9c1107d5daca497fc4791"
     resources:
       limits:
         # We'r setting Xms = Xmx anyway, whichever the amount we know conductor will be comfortable with.
         memory: 4.5Gi
       requests:
-        cpu: 1
+        cpu: 4
         memory: 4.5Gi
   ui:
     ingress:
@@ -78,8 +78,8 @@ netflix-conductor:
 
   elasticsearch:
     enabled: true
-    host: preview-es
-    port: 9300
+    host: http://preview-elasticsearch-client:9200
+    port: 9200
     indexName: "conductor"
 
   redis:
@@ -92,11 +92,15 @@ netflix-conductor:
     password: ConductorMysqlPassword
     dbName: conductor
 
-
-
 # Add the following and change enabled to true if external es required
 elasticsearch:
-  enabled: false
+  image:
+    rep: x
+    t: y
+  enabled: true
+  host: http://preview-elasticsearch-client
+  port: 9200
+  indexName: "conductor"
 # Add the following and change enabled to true if external redis required
 redis:
   enabled: false
