--- a/charts/netflix-conductor/templates/deployment-conductor-server.yaml
+++ b/charts/netflix-conductor/templates/deployment-conductor-server.yaml
@@ -68,6 +68,8 @@ spec:
               value: {{ .Values.server.newrelic.enabled | quote }}
             - name: NEW_RELIC_DISTRIBUTED_TRACING_ENABLED
               value: {{ .Values.server.newrelic.tracing.enabled | quote }}
+            - name: db
+              value: "mysql"
             - name: conductor_mysql_connection_pool_idle_min
               value: "7"
             - name: conductor_mysql_connection_pool_size_max
