--- a/charts/preview/Makefile
+++ b/charts/preview/Makefile
@@ -13,6 +13,7 @@ else ifeq ($(OS),Linux)
 
 	sed -i -e "s/preview_tag_server:.*/tag: $(PREVIEW_VERSION)/" values.yaml
 	sed -i -e "s/preview_tag_ui:.*/tag: ui-$(PREVIEW_VERSION)/" values.yaml
+	echo "install preview secret" && cp -v secret.yaml ../netflix-conductor/templates
 else
 	echo "platfrom $(OS) not supported to release from"
 	exit -1
