--- a/charts/netflix-conductor/values.yaml
+++ b/charts/netflix-conductor/values.yaml
@@ -35,6 +35,12 @@ server:
     licenseKey: "c3a6b94918f96d44af11c628b52630d59f5ad20c"
     tracing:
       enabled: false
+  env:
+    workflow_elasticsearch_instanceType: "external"
+    workflow_elasticsearch_url: "https://vpc-conductor-elasticsearch-stg-d2ivhx73ka55yzcbdbcrvk4vea.ap-southeast-2.es.amazonaws.com:443"
+    db: "mysql"
+    conductor_mysql_connection_pool_idle_min: "7"
+    conductor_mysql_connection_pool_size_max: "10"
 
 ui:
   repository: kayosportsau/netflixconductor
