--- a/charts/preview/values.yaml
+++ b/charts/preview/values.yaml
@@ -48,6 +48,13 @@ netflix-conductor:
       requests:
         cpu: 4
         memory: 4.5Gi
+    env:
+      workflow_elasticsearch_instanceType: "external"
+      workflow_elasticsearch_url: "http://preview-elasticsearch-client:9200"
+      db: "mysql"
+      conductor_mysql_connection_pool_idle_min: "7"
+      conductor_mysql_connection_pool_size_max: "10"
+
   ui:
     ingress:
       annotations:
