safely verify secret extraction on the side

--- a/charts/netflix-conductor/files/log4j.properties
+++ b/charts/netflix-conductor/files/log4j.properties
@@ -30,3 +30,4 @@ log4j.logger.com.netflix.conductor.dao.mysql=INFO
 
 # Ack task taken,completion for monitoring contract with workers
 log4j.logger.com.netflix.conductor.service.TaskServiceImpl=INFO
+log4j.logger.com.netflix.conductor.mysql.MySQLDataSourceProvider=DEBUG
