--- a/server/src/main/resources/log4j.properties
+++ b/server/src/main/resources/log4j.properties
@@ -24,7 +24,7 @@ log4j.logger.org.apache.zookeeper=DEBUG
 log4j.logger.org.apache.curator=DEBUG
 log4j.logger.com.netflix.conductor.core.execution.WorkflowExecutor=DEBUG
 log4j.logger.com.netflix.conductor.service.ExecutionLockService=DEBUG
-
+log4j.logger.com.netflix.conductor.mysql.MySQLDataSourceProvider=DEBUG
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
