--- a/charts/preview/values.yaml
+++ b/charts/preview/values.yaml
@@ -26,9 +26,9 @@ netflix-conductor:
   fullnameOverride: "netflix-conductor"
 
   server:
-    podAnnotations:
-      iam.amazonaws.com/role: offers-api-staging-role
-#      iam.amazonaws.com/role: arn:aws:iam::053457794187:role/offers-api-staging-role
+    loadSamples: true
+#    podAnnotations:
+#     iam.amazonaws.com/role: conductor-role
     replicaCount: 2
     ingress:
       annotations:
@@ -38,7 +38,6 @@ netflix-conductor:
       preview_repository_server:
       preview_tag_server:
       pullPolicy: IfNotPresent
-    loadSamples: true
     newrelic:
       enabled: true
       tracing:
@@ -57,7 +56,6 @@ netflix-conductor:
       db: "mysql"
       conductor_mysql_connection_pool_idle_min: "7"
       conductor_mysql_connection_pool_size_max: "10"
-      loadSample: true
 
   ui:
     ingress:
