--- a/charts/preview/values.yaml
+++ b/charts/preview/values.yaml
@@ -56,7 +56,9 @@ netflix-conductor:
       db: "mysql"
       conductor_mysql_connection_pool_idle_min: "7"
       conductor_mysql_connection_pool_size_max: "10"
-
+      jdbc_username: "conductor"
+      jdbc_password: "ConductorMysqlPassword"
+      jdbc_url: "jdbc:mysql://preview-mysql:3306/conductor?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Australia/Sydney"
   ui:
     ingress:
       annotations:
