--- a/server/src/main/resources/log4j.properties
+++ b/server/src/main/resources/log4j.properties
@@ -28,3 +28,8 @@ log4j.logger.com.netflix.conductor.mysql.MySQLDataSourceProvider=DEBUG
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+# JSON is Kibana friendly
+# https://github.com/logstash/log4j-jsonevent-layout
+log4j.appender.JSON=org.apache.log4j.ConsoleAppender
+log4j.appender.JSON.DatePattern=.yyyy-MM-dd
+log4j.appender.JSON.layout=net.logstash.log4j.JSONEventLayoutV1
