--- a/charts/netflix-conductor/files/log4j.properties
+++ b/charts/netflix-conductor/files/log4j.properties
@@ -1,18 +1,22 @@
 # Set root logger level to DEBUG and its only appender to A1.
 # WARN is default, but we leave the WARN here for convenience, so we dont need to look them up when needed.
-log4j.rootLogger=WARN, A1
+log4j.rootLogger=WARN, JSON
 
 # A1 is human friendly
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+# log4j.appender.A1=org.apache.log4j.ConsoleAppender
+# log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # matching logstash pattern at https://bitbucket.foxsports.com.au/projects/DEVOPS/repos/ansible-playbooks/browse/roles/elastic5/templates/input-output.json.j2
-log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %p [-,,,] 7 --- [%t] %c : %m%n
+#log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %p [-,,,] 7 --- [%t] %c : %m%n
 
 # JSON is Kibana friendly
 # https://github.com/logstash/log4j-jsonevent-layout
 # log4j.appender.JSON=org.apache.log4j.ConsoleAppender
 # log4j.appender.JSON.DatePattern=.yyyy-MM-dd
 # log4j.appender.JSON.layout=net.logstash.log4j.JSONEventLayoutV1
+log4j.appender.JSON=org.apache.log4j.ConsoleAppender
+log4j.appender.JSON.DatePattern=.yyyy-MM-dd
+log4j.appender.JSON.layout=net.logstash.log4j.JSONEventLayoutV1
+#log4j.appender.JSON.layout=org.apache.logging.log4j.core.layout.JsonLayout
 
 
 log4j.logger.com.zaxxer.hikari.pool.HikariPool=WARN
@@ -30,4 +34,4 @@ log4j.logger.com.netflix.conductor.dao.mysql=INFO
 
 # Ack task taken,completion for monitoring contract with workers
 log4j.logger.com.netflix.conductor.service.TaskServiceImpl=INFO
-log4j.logger.com.netflix.conductor.mysql=DEBUG
+log4j.logger.com.netflix.conductor.mysql=INFO
