--- a/core/build.gradle
+++ b/core/build.gradle
@@ -19,6 +19,11 @@ dependencies {
     compile "javax.el:javax.el-api:${revJavaElApi}"
     // https://mvnrepository.com/artifact/org.glassfish/javax.el
     compile group: 'org.glassfish', name: 'javax.el', version: "${revJavaElApi}"
-    
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.3.0'
+    compile('com.squareup.retrofit2:retrofit:2.1.0')
+    compile('com.squareup.retrofit2:converter-jackson:2.0.1')
+    compile "io.prometheus:simpleclient:0.6.0"
+    compile "io.prometheus:simpleclient_servlet:0.6.0"
+
     testCompile "org.slf4j:slf4j-log4j12:${revSlf4jlog4j}"
 }
