--- a/contribs/build.gradle
+++ b/contribs/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
 	compile "io.nats:java-nats-streaming:${revNatsStreaming}"
 
+	compile "com.rabbitmq:amqp-client:${revAmqpClient}"
 	compileOnly "javax.ws.rs:jsr311-api:${revJsr311Api}"
 	compile "io.swagger:swagger-jaxrs:${revSwagger}"
 
