--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -53,3 +53,20 @@ workflow.system.task.worker.poll.interval=${POLL_INTERVAL}
 #Sweeper
 decider.sweep.disable=${IS_SWEEP_DISABLED}
 decider.sweep.frequency.seconds=${SWEEP_FREQ}
+
+flo.indexer.topic.name=${FLO_INDEXER_TOPIC_NAME:ff-flo-event-logs}
+flo.indexer.topic.faultStrategy=${FLO_INDEXER_TOPIC_FAULT_STRATEGY:NONE}
+flo.indexer.topic.enableEncryption=${FLO_INDEXER_TOPIC_ENABLE_ENCRYPTION:false}
+flo.indexer.topic.keyId=${ENCRYPTION_KEY_ID:flo_indexer_encryption_key_id}
+
+tier1.producer.primary.bootstrapServers=${TIER1_PRIMARY_BOOTSTRAP_SERVERS:localhost:9092}
+tier1.producer.primary.authMechanism=${TIER1_PRIMARY_AUTH_MECHANISM:NONE}
+tier1.producer.primary.username=${TIER1_PRIMARY_USERNAME:}
+tier1.producer.primary.password=${TIER1_PRIMARY_PASSWORD:}
+tier1.producer.secondary.bootstrapServers=${TIER1_SECONDARY_BOOTSTRAP_SERVERS:localhost:9093}
+tier1.producer.secondary.authMechanism=${TIER1_SECONDARY_AUTH_MECHANISM:NONE}
+tier1.producer.secondary.username=${TIER1_SECONDARY_USERNAME:}
+tier1.producer.secondary.password=${TIER1_SECONDARY_PASSWORD:}
+tier1.producer.clientId=${TIER1_PRODUCER_CLIENT_ID:ff-flo-platform}
+tier1.producer.enableCompression=${TIER1_PRODUCER_ENABLE_COMPRESSION:true}
+tier1.producer.acks=${TIER1_PRODUCER_ACKS:ALL}
