Docker containers during build for mysql and postgres

--- a/mysql-persistence/build.gradle
+++ b/mysql-persistence/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath "com.avast.gradle:gradle-docker-compose-plugin:${revDockerCompose}"
+    }
+}
+
+apply plugin: 'docker-compose'
+
 dependencies {
     compile project(':conductor-core')
     compile "com.google.inject:guice:${revGuice}"
@@ -8,9 +20,36 @@ dependencies {
     compile "org.flywaydb:flyway-core:${revFlywayCore}"
 
     testCompile project(':conductor-core').sourceSets.test.output
-    testCompile "ch.vorburger.mariaDB4j:mariaDB4j:${revMariaDB4j}"
     testCompile "org.slf4j:slf4j-log4j12:${revSlf4jlog4j}"
 }
+
+dockerCompose{
+    integrationTestDocker{
+        useComposeFiles = ["./docker-compose.yml"]
+        startedServices = ["mysqldb"]
+        waitForTcpPorts = true
+        isRequiredBy(tasks.test)
+        projectName = project.name
+    }
+}
+
+task intDockerStart() {
+    group = "Mysql data access based Integration Test"
+    description "Starts a local db container for mysql data access integration tests."
+    dependsOn integrationTestDockerComposeDownForced
+    dependsOn integrationTestDockerComposeUp
+}
+
+task intDockerDown(dependsOn: integrationTestDockerComposeDownForced) {
+    group = "Mysql data access based Integration Test"
+    description "Stops a local db container for Artemis data access integration tests."
+}
+
+test.doFirst {
+    dockerCompose.exposeAsSystemProperties(test)
+}
+
+test.finalizedBy("intDockerDown")
 
 test {
     //the MySQL unit tests must run within the same JVM to share the same embedded DB
