--- a/postgres-persistence/build.gradle
+++ b/postgres-persistence/build.gradle
@@ -1,3 +1,16 @@
+buildscript {
+
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath "com.avast.gradle:gradle-docker-compose-plugin:${revDockerCompose}"
+    }
+}
+
+apply plugin: 'docker-compose'
+
 dependencies {
     compile project(':conductor-core')
     compile "com.google.inject:guice:${revGuice}"
@@ -8,10 +21,36 @@ dependencies {
     compile "org.flywaydb:flyway-core:${revFlywayCore}"
 
     testCompile project(':conductor-core').sourceSets.test.output
-    testCompile "com.opentable.components:otj-pg-embedded:${revOtjPgEmbedded}"
     testCompile "org.slf4j:slf4j-log4j12:${revSlf4jlog4j}"
-
 }
+
+dockerCompose{
+    integrationTestDocker{
+        useComposeFiles = ["./docker-compose.yml"]
+        startedServices = ["postgresdb"]
+        waitForTcpPorts = true
+        isRequiredBy(tasks.test)
+        projectName = project.name
+    }
+}
+
+task intDockerStart() {
+    group = "Postgres data access based Integration Test"
+    description "Starts a local db container for postgres data access integration tests."
+    dependsOn integrationTestDockerComposeDownForced
+    dependsOn integrationTestDockerComposeUp
+}
+
+task intDockerDown(dependsOn: integrationTestDockerComposeDownForced) {
+    group = "Postgres data access based Integration Test"
+    description "Stops a local db container for Artemis data access integration tests."
+}
+
+test.doFirst {
+    dockerCompose.exposeAsSystemProperties(test)
+}
+
+test.finalizedBy("intDockerDown")
 
 test {
     //the SQL unit tests must run within the same JVM to share the same embedded DB
