add username and password for confluent txn cluster

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -60,13 +60,13 @@ flo.indexer.topic.enableEncryption=${FLO_INDEXER_TOPIC_ENABLE_ENCRYPTION:false}
 flo.indexer.topic.keyId=${ENCRYPTION_KEY_ID:flo_indexer_encryption_key_id}
 
 producer.primary.bootstrapServers=${PRIMARY_BOOTSTRAP_SERVERS:localhost:9092}
-producer.primary.authMechanism=${PRIMARY_AUTH_MECHANISM:NONE}
-producer.primary.username=${PRIMARY_USERNAME:}
-producer.primary.password=${PRIMARY_PASSWORD:}
+producer.primary.authMechanism=${PRIMARY_AUTH_MECHANISM:SASL_PLAIN}
+producer.primary.username=${KAFKA_TXN_PRIMARY_API_SECRET:}
+producer.primary.password=${KAFKA_TXN_PRIMARY_API_SECRET:}
 producer.secondary.bootstrapServers=${SECONDARY_BOOTSTRAP_SERVERS:localhost:9093}
 producer.secondary.authMechanism=${SECONDARY_AUTH_MECHANISM:NONE}
-producer.secondary.username=${SECONDARY_USERNAME:}
-producer.secondary.password=${SECONDARY_PASSWORD:}
+producer.secondary.username=${KAFKA_TXN_PRIMARY_API_KEY:}
+producer.secondary.password=${KAFKA_TXN_PRIMARY_API_SECRET:}
 producer.clientId=${TIER1_PRODUCER_CLIENT_ID:ff-flo-platform}
 producer.enableCompression=${TIER1_PRODUCER_ENABLE_COMPRESSION:true}
 producer.acks=${TIER1_PRODUCER_ACKS:ALL}
